fix: header alignment

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@ body {
 }
 
 h1 {
+	text-align: initial;
 	font-size: 200%;
 	font-weight: bold;
 }
